--- a/style.css
+++ b/style.css
@@ -27,6 +27,81 @@ a:hover {
     background: #FFFFFF url("img/pageload-spinner.gif") no-repeat center center;
 }
 
+/** Mes modifications en cours ajoutées ( Et non pas modifiées ) **/
+
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.text-black {
+    color: #000000!important;
+}
+
+.text-white {
+    color: #FFF;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.text-bold {
+    font-weight: bold;
+}
+.text-italic {
+    font-style: italic;
+}
+
+.description_agence, .realisations_agence {
+    width: 62%;
+    margin-bottom: 20px;
+}
+.description_agence p {
+    font-size: 21px;
+}
+
+.text-description {
+    font-size: 16px;
+}
+
+.commentaire {
+    margin-bottom: 0;
+    font-size: 21px;
+}
+
+.flex-space-around {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    margin-top: 20px;
+}
+
+footer a {
+    list-style: none;
+    color: #000000;
+    font-size: 18px;
+}
+
+li > a {
+    color: #000000;
+    font-size: 18px;
+}
+
+
+.font-size16 {
+    font-size: 16px;
+}
+
+.footer_icons {
+    color: #000000;
+}
+
+/** Fin des modifications en cours **/
+
+
+
 .bloc {
     width: 100%;
     clear: both;
@@ -45,7 +120,8 @@ a:hover {
 }
 
 .bloc-lg {
-    padding: 100px 50px;
+    padding-top: 70px;
+    padding-bottom: 70px;
 }
 
 .bloc-md {
@@ -123,7 +199,6 @@ a:hover {
 .d-bloc .navbar a,
 .d-bloc .navbar-brand,
 .d-bloc a .icon-sm,
-.d-bloc a .icon-md,
 .d-bloc a .icon-lg,
 .d-bloc a .icon-xl,
 .d-bloc h1 a,
@@ -140,7 +215,6 @@ a:hover {
 .d-bloc .navbar a:hover,
 .d-bloc .navbar-brand:hover,
 .d-bloc a:hover .icon-sm,
-.d-bloc a:hover .icon-md,
 .d-bloc a:hover .icon-lg,
 .d-bloc a:hover .icon-xl,
 .d-bloc h1 a:hover,
@@ -283,8 +357,12 @@ a:hover {
     padding-left: 0;
 }
 
-#bloc-1-hero h1 {
+#bloc-1-hero h2 {
     font-size: 32px;
+}
+
+#bloc-2-services h1 {
+    font-size: 21px;
 }
 
 .navbar {
@@ -534,6 +612,8 @@ a[data-lightbox] {
     position: relative;
     display: block;
     text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 a[data-lightbox]:hover::before {
@@ -642,16 +722,19 @@ a[data-lightbox]:hover img {
 h1,
 h2,
 h3,
-h4,
 h5,
 h6,
 p,
 label,
-.btn,
-a {
+.btn {
     font-family: "helvetica";
     font-weight: 400;
     color: #575757!important;
+}
+
+img.img-responsive.portfolio-thumb {
+    max-width: 320px;
+    width: 100%;
 }
 
 .container {
@@ -697,6 +780,7 @@ p {
     padding: 12px 28px 12px 28px;
     font-size: 16px;
     font-weight: 700;
+    margin-bottom: 44px;
 }
 
 .social {
@@ -727,7 +811,7 @@ h1 {
 }
 
 h4 {
-    color: #333333!important;
+    color: #FFF;
 }
 
 .icons {
@@ -736,7 +820,7 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #FFF!important;
 }
 
 .portfolio-thumb {
@@ -774,7 +858,7 @@ h4 {
     background-color: #F3976C;
 }
 
-.tc-white {
+.tc-tangerine {
     color: #F3976C!important;
 }
 
@@ -783,21 +867,26 @@ h4 {
     color: #FFFFFF!important;
 }
 
+.btn-atomic-tangerine-b {
+    background: #F3976C;
+    color: #000000!important;
+}
+
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
     color: #FFFFFF!important;
 }
 
 .ltc-white {
-    color: #FFFFFF!important;
+    color: #FFF!important;
 }
 
 .ltc-white:hover {
-    color: #cccccc!important;
+    color: #FFF!important;
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #FFF!important;
 }
 
 .ltc-atomic-tangerine:hover {
@@ -813,16 +902,12 @@ h4 {
     background-image: url("img/dots-bg.png");
 }
 
-.bg-lines-h2-bg {
-    background-image: url("img/lines-h2-bg.png");
-}
-
 .bg-banniere {
-    background-image: url("img/agence-la-panthere.jpg");
+    background-image: url("img/agence-la-panthere.jpg"); 
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation.jpg");
 }
 
 @media (max-width: 1024px) {
@@ -846,15 +931,18 @@ h4 {
     .nav-center.navbar .nav {
         max-width: 100%
     }
+    .auteur_commentaire {
+        text-align: center;
+    }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -872,10 +960,6 @@ h4 {
         overflow-x: hidden;
         position: relative;
     }
-    .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
     .bloc-group,
     .bloc-group .bloc {
         display: block;
@@ -884,8 +968,9 @@ h4 {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
+    }
+    .auteur_commentaire {
+        text-align: center;
     }
 }
 
@@ -978,8 +1063,7 @@ h4 {
         padding-right: 0;
     }
     .bloc-xxl,
-    .bloc-xl,
-    .bloc-lg {
+    .bloc-xl {
         padding: 40px 0;
     }
     .bloc-sm,
@@ -1026,17 +1110,27 @@ h4 {
         width: 180px;
         height: 320px;
     }
+    .auteur_commentaire {
+        text-align: center;
+    }
 }
 
 @media (max-width: 400px) {
     .bloc {
-        padding-left: 0;
-        padding-right: 0;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    .auteur_commentaire {
+        text-align: center;
     }
 }
 
 @media (max-width: 767px) {
     .bloc-mob-center-text {
         text-align: center;
+    }
+    .flex-center {
+        display: flex;
+        flex-direction: column;
     }
 }
